--- a/about.html
+++ b/about.html
@@ -91,8 +91,7 @@
                     <div class="row">
                         <div class="column xl-12">
                             <h1 class="page-title">
-                                <span class="page-title__small-type text-pretitle">About</span>
-                                Hi, I'm Monica
+                                Hey, its me! Eric
                             </h1>
                             
                         </div>
