--- a/journals.html
+++ b/journals.html
@@ -89,8 +89,11 @@
                     <div class="row">
                         <div class="column xl-12">
                             <h1 class="page-title">
-                                Journals
+                                ideate journals
                             </h1>
+                            <h2> 
+                            a place for our ideas to go
+                            </h2>
                             
                         </div>
                     </div>
