--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,11 @@
                         <div class="column xl-12">
                             <h1 class="page-title">
                                 Get In Touch
-                            </h1>                            
+                            </h1>   
+                            <h2> 
+                                it aint hard 
+                            </h2>
+                                                 
                         </div>
                     </div>
                </section> <!--pageheader -->  
