--- a/contact.html
+++ b/contact.html
@@ -89,10 +89,10 @@
                     <div class="row">
                         <div class="column xl-12">
                             <h1 class="page-title">
-                                Get In Touch
+                                Be a pen-pal
                             </h1>   
                             <h2> 
-                                it aint hard 
+                                it aint hard
                             </h2>
                                                  
                         </div>
@@ -103,13 +103,11 @@
 
                     <div class="row pageintro">
                         <div class="column xl-6 lg-12">
-                            <h2 class="text-display-title">Let's take your business to the next level.</h2>
+                            <h2 class="text-display-title">I want to make myself accessible to my community. I want my community to be made accessible to me.</h2>
                         </div>
                         <div class="column xl-6 lg-12 u-flexitem-x-right">
                             <p class="lead">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias eos quas blanditiis, quos sint nostrum fugit aperiam 
-                            inventore optio itaque molestias corporis, ipsa tenetur eligendi nihil iste porro, natus culpa consequuntur. Maxime, 
-                            corporis tempore. Sed tenetur veritatis velit recusandae eum, molestiae voluptate ducimus laudantium esse illo. 
+                            These pen-pal emails are a funny kind of ongoing conversation for my mid-inner circle - If you're reading this I am inviting you here and you belong here! ... become my pen-pal if you would like me to share personal updates, musings, writing, art, music and other projects with you as they come. It's a reciprocal conversation, not a newsletter! Your responses are private to me but I tend to respond in the general letter, anonymizing your details
                             </p>
                         </div>                       
                     </div> <!-- pageintro -->   
