--- a/contact.html
+++ b/contact.html
@@ -103,11 +103,11 @@
 
                     <div class="row pageintro">
                         <div class="column xl-6 lg-12">
-                            <h2 class="text-display-title">I want to make myself accessible to my community. I want my community to be made accessible to me.</h2>
+                            <h2 class="text-display-title">i want to make myself accessible to my community. i want my community to be made accessible to me.</h2>
                         </div>
                         <div class="column xl-6 lg-12 u-flexitem-x-right">
                             <p class="lead">
-                            These pen-pal emails are a funny kind of ongoing conversation for my mid-inner circle - If you're reading this I am inviting you here and you belong here! ... become my pen-pal if you would like me to share personal updates, musings, writing, art, music and other projects with you as they come. It's a reciprocal conversation, not a newsletter! Your responses are private to me but I tend to respond in the general letter, anonymizing your details
+                            these pen-pal emails are a funny kind of ongoing conversation for my mid-inner circle - if you're reading this i am inviting you here and you belong here! ... become my pen-pal if you would like me to share personal updates, musings, writing, art, music and other projects with you as they come. it's a reciprocal conversation, not a newsletter! your responses are private to me but i tend to respond in the general letter, anonymizing your details
                             </p>
                         </div>                       
                     </div> <!-- pageintro -->   
@@ -125,26 +125,23 @@
 
                     <div class="row width-narrower pagemain">
                         <div class="column xl-12">
-                            <h2>Let's Work Together</h2>
+                            <h2>reach me</h2>
 
                             <div class="row">
                                 <div class="column xl-6 md-12 contact-cta">     
                                     <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quisquam voluptatibus debitis aperiam ratione. Officia, 
-                                    suscipit iure, tenetur eum consequatur, consequuntur omnis accusamus odit quod pariatur excepturi architecto veniam. Soluta 
-                                    modi dignissimos libero blanditiis at saepe doloribus temporibus illo facilis dolorem, aliquam obcaecati accusamus nihil 
-                                    laboriosam, esse vel. Quod, vitae.
+                                    He'
                                     </p>
         
-                                    <a href="mailto:#0" class="btn btn--primary u-fullwidth contact-btn">
+                                    <a href="mailto:eric.ideate@gmail.com" class="btn btn--primary u-fullwidth contact-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z"></path></svg>
-                                        Send Me An Email
+                                        send me an email
                                     </a>
                                 </div> 
                                 <div class="column xl-5 md-12 u-flexitem-x-right">
 
                                     <div class="contact-block">
-                                        <h6>Follow On Social</h6>
+                                        <h6>follow on social</h6>
                                         <ul class="contact-social social-list">
                                             <li>
                                                 <a href="#0">
