--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blog - Monica</title>
+    <title>archive - eric.ideate</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
