--- a/index.html
+++ b/index.html
@@ -487,9 +487,9 @@
                 <div class="column xl-12 grid-block">
 
                     <div class="grid-full section-header text-center">
-                        <div class="text-pretitle">Recent Articles</div>                           
+                        <div class="text-pretitle">archive</div>                           
                         <h2 class="text-display-title">
-                        Latest articles from my blog.
+                        access past pen-pal letters here.
                         </h2>  
                     </div> <!-- end section-header --> 
 
