--- a/archive.html
+++ b/archive.html
@@ -68,7 +68,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="journals.html">Journals</a></li>
                         <li class="current"><a href="archive.html">archive</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">contact</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
@@ -366,7 +366,7 @@
                         <li><a href="journals.html">Journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">contact</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
                 </div>
