--- a/single.html
+++ b/single.html
@@ -66,7 +66,7 @@
                 <nav class="s-header__nav">    
                     <ul class="s-header__menu-links">
                         <li><a href="about.html">About</a></li>
-                        <li><a href="journals.html">Journals</a></li>
+                        <li><a href="journals.html">journals</a></li>
                         <li class="current"><a href="archive.html">archive</a></li>
                         <li><a href="contact.html">contact</a></li>
                     </ul> <!-- s-header__menu-links -->
@@ -349,7 +349,7 @@
                     <h3>Site Links</h3>
                     <ul class="link-list">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="journals.html">Journals</a></li>
+                        <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">contact</a></li>
