--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li class="current"><a href="about.html">About</a></li>
+                        <li class="current"><a href="home.html">homepond</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="contact.html">contact</a></li>
@@ -342,7 +342,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="home.html">homepond</a></li>
                         <li><a href="contact.html">contact</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
