--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <li><a href="home.html">homepond</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="correspond.html">correspond</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
@@ -584,7 +584,7 @@
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="home.html">homepond</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="correspond.html">correspond</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
                 </div>
