--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                         <li><a href="home.html">homepond</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
-                        <li class="current"><a href="contact.html">contact</a></li>
+                        <li class="current"><a href="correspond.html">correspond</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
@@ -300,7 +300,7 @@
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="home.html">homepond</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="correspond.html">correspond</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
                 </div>
