--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li><a href="home.html">homepond</a></li>
+                        <li><a href="homepnd.html">homepond</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="correspond.html">correspond</a></li>
@@ -172,7 +172,7 @@
                         </div> <!-- end s-about__content-main -->
 
                         <div class="s-about__content-btn grid-section-split__bottom">
-                            <a href="home.html">homepond</a> class="btn btn--stroke u-fullwidth">More About Me</a>
+                            <a href="homepnd.html">homepond</a> class="btn btn--stroke u-fullwidth">More About Me</a>
 
                             <ul class="s-about__social social-list">
                                 <li>
@@ -583,7 +583,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
-                        <li><a href="home.html">homepond</a></li>
+                        <li><a href="homepnd.html">homepond</a></li>
                         <li><a href="correspond.html">correspond</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
