--- a/generic.html
+++ b/generic.html
@@ -66,7 +66,7 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li><a href="home.html">homepond</a></li>
+                        <li><a href="homepnd.html">homepond</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="correspond.html">correspond</a></li>
@@ -307,7 +307,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
-                        <li><a href="home.html">homepond</a></li>
+                        <li><a href="homepnd.html">homepond</a></li>
                         <li><a href="correspond.html">correspond</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
