--- a/single.html
+++ b/single.html
@@ -65,7 +65,7 @@
 
                 <nav class="s-header__nav">    
                     <ul class="s-header__menu-links">
-                        <li><a href="homepnd.html">homepond</a></li>
+                        <li><a href="homepond.html">homepond</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li class="current"><a href="archive.html">archive</a></li>
                         <li><a href="correspond.html">correspond</a></li>
@@ -351,7 +351,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
-                        <li><a href="homepnd.html">homepond</a></li>
+                        <li><a href="homepond.html">homepond</a></li>
                         <li><a href="correspond.html">correspond</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
