--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <div class="grid-full section-header text-center">
                         <div class="text-pretitle">archive</div>                           
                         <h2 class="text-display-title">
-                        access past pen-pal letters here.
+                        access past pen-pal letters
                         </h2>  
                     </div> <!-- end section-header --> 
 
