--- a/correspond.html
+++ b/correspond.html
@@ -89,7 +89,7 @@
                     <div class="row">
                         <div class="column xl-12">
                             <h1 class="page-title">
-                                Be a pen-pal
+                                be a penpal
                             </h1>   
                             <h2> 
                                 it aint hard
