--- a/archive.html
+++ b/archive.html
@@ -68,7 +68,7 @@
                         <li><a href="homepond.html">homepond</a></li>
                         <li><a href="journals.html">journals</a></li>
                         <li class="current"><a href="archive.html">archive</a></li>
-                        <li><a href="correspond.html">correspond</a></li>
+                        <li><a href="penpal.html">penpal</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
@@ -366,7 +366,7 @@
                         <li><a href="journals.html">journals</a></li>
                         <li><a href="archive.html">archive</a></li>
                         <li><a href="homepond.html">homepond</a></li>
-                        <li><a href="correspond.html">correspond</a></li>
+                        <li><a href="penpal.html">penpal</a></li>
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
                 </div>
