Corner Image to Ivysaur

--- a/journals.html
+++ b/journals.html
@@ -55,7 +55,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <img src="https://img.pokemondb.net/artwork/avif/ivysaur.avif" alt="Homepage">
                         </a>
                     </div>
 
@@ -91,10 +91,6 @@
                             <h1 class="page-title">
                                 ideate journals
                             </h1>
-                            <h2> 
-                            a place for our ideas to go
-                            </h2>
-                            
                         </div>
                     </div>
                </section> <!-- pageheader -->  
