--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="https://img.pokemondb.net/artwork/avif/ivysaur.avif" alt="Homepage">
+                            <img src="images/logo.svg" alt="Homepage">
                         </a>
                     </div>
 
@@ -107,7 +107,7 @@
 
                         <div class="s-intro__content-media"> 
                             <div class="s-intro__content-media-inner">                               
-                                <img src="images/intro-bg.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg@2x.jpg 2x" alt="">
+                                <img src="headshot flipped.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg@2x.jpg 2x" alt="">
                                 <div class="lines">                               
                                     <span></span>                                  
                                 </div>
