--- a/journals.html
+++ b/journals.html
@@ -55,7 +55,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="https://img.pokemondb.net/artwork/avif/ivysaur.avif" alt="Homepage">
+                            <img src="images/logo.svg" alt="Homepage">
                         </a>
                     </div>
 
