--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="column lg-12 s-intro__content-inner grid-block">
                         
                         <div class="s-intro__content-text">
-                            <div class="s-intro__content-pretitle text-pretitle">Hello, I'm Monica</div>
+                            <div class="s-intro__content-pretitle text-pretitle">hey, i'm eric</div>
                             <h1 class="s-intro__content-title">
                             I do not create marketing <br>
                             strategies for your <br>
@@ -107,7 +107,7 @@
 
                         <div class="s-intro__content-media"> 
                             <div class="s-intro__content-media-inner">                               
-                                <img src="headshot flipped.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg@2x.jpg 2x" alt="">
+                                <img src="headshot flipped.jpg" srcset="headshot flipped.jpg, headshot flipped.jpg 2x" alt="">
                                 <div class="lines">                               
                                     <span></span>                                  
                                 </div>
