--- a/single.html
+++ b/single.html
@@ -72,7 +72,7 @@
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
-                        <a href="contact.html" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>
+                        <a href="penpal.html" class="btn btn--primary s-header__contact-btn">penpal</a>
                         
                     </div> <!-- s-header__contact -->    
                 </nav> <!-- end s-header__nav -->
