--- a/penpal.html
+++ b/penpal.html
@@ -72,7 +72,7 @@
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
-                        <a href="penpal.html" class="btn btn--primary s-header__contact-btn">penpal</a>   
+                        <a href="penpal.html" class="btn btn--primary s-header__contact-btn">be a penpal</a>   
                                              
                     </div> <!-- s-header__contact -->
     
