--- a/penpal.html
+++ b/penpal.html
@@ -131,7 +131,7 @@
                             <div class="row">
                                 <div class="column xl-6 md-12 contact-cta">     
                                     <p>
-                                    He'
+                                    
                                     </p>
         
                                     <a href="mailto:eric.ideate@gmail.com" class="btn btn--primary u-fullwidth contact-btn">
@@ -173,14 +173,13 @@
 
                                     <div class="contact-block">
                                         <h6>Email</h6>
-                                        <a href="mailto:#0">hello@monica.com</a>
+                                        <a href="mailto:eric.ideate@gmail.com">eric.ideate@gmail.com</a>
                                     </div>
 
                                     <div class="contact-block">
                                         <h6>Phone</h6>
                                         <ul class="contact-list">
-                                            <li><a href="tel:197-543-2345">+197 543 2345</a></li>
-                                            <li><a href="tel:197-123-9876">+197 123 9876</a></li>
+                                            <li><a href="tel:312-685-1419">(312)685-1419</a></li>
                                         </ul>
                                     </div>
 
