--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                         <div class="s-intro__content-media"> 
                             <div class="s-intro__content-media-inner">                               
-                                <img src="images/headshot_flipped.jpeg" srcset="images/headshot.jpg, headshot_flipped.jpg 2x" alt="">
+                                <img src="images/headshot_flipped.jpeg" srcset="images/headshot_flipped.jpeg, images/headshot_flipped.jpeg 2x" alt="">
                                 <div class="lines">                               
                                     <span></span>                                  
                                 </div>
